Bug 294651 - Missing prctl(2) operations in the Linuxulator
Summary: Missing prctl(2) operations in the Linuxulator
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 16.0-CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: Pouria Mousavizadeh Tehrani
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-04-19 21:56 UTC by Ricardo Branco
Modified: 2026-04-22 10:23 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ricardo Branco 2026-04-19 21:56:14 UTC
There are some Linux prctl(2) flags for which we support the SET method but we lack the GET equivalent like:

- PR_GET_CHILD_SUBREAPER 
- PR_GET_NO_NEW_PRIVS

Will submit a fix.
Comment 1 Ricardo Branco 2026-04-19 22:03:33 UTC
https://github.com/freebsd/freebsd-src/pull/2151
Comment 2 commit-hook freebsd_committer freebsd_triage 2026-04-22 09:57:11 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=98a868c61b931e37cf09adecd8542cbd874d333f

commit 98a868c61b931e37cf09adecd8542cbd874d333f
Author:     Ricardo Branco <rbranco@suse.de>
AuthorDate: 2026-04-19 21:16:48 +0000
Commit:     Pouria Mousavizadeh Tehrani <pouria@FreeBSD.org>
CommitDate: 2026-04-22 09:27:41 +0000

    linux: Support LINUX_PR_GET_NO_NEW_PRIVS prctl(2)

    PR: 294651
    Signed-off-by: Ricardo Branco <rbranco@suse.de>
    Reviewed by: kib, pouria
    Pull-Request: https://github.com/freebsd/freebsd-src/pull/2151

 sys/compat/linux/linux_misc.c | 8 ++++++++
 sys/compat/linux/linux_misc.h | 3 ++-
 2 files changed, 10 insertions(+), 1 deletion(-)
Comment 3 commit-hook freebsd_committer freebsd_triage 2026-04-22 09:57:12 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=50ff71e956b631b56a878bd723a9b32dfbdac60f

commit 50ff71e956b631b56a878bd723a9b32dfbdac60f
Author:     Ricardo Branco <rbranco@suse.de>
AuthorDate: 2026-04-19 21:06:52 +0000
Commit:     Pouria Mousavizadeh Tehrani <pouria@FreeBSD.org>
CommitDate: 2026-04-22 09:26:55 +0000

    linux: Support PR_GET_CHILD_SUBREAPER prctl(2)

    PR: 294651
    Signed-off-by: Ricardo Branco <rbranco@suse.de>
    Reviewed by: kib, pouria
    Pull-Request: https://github.com/freebsd/freebsd-src/pull/2151

 sys/compat/linux/linux_misc.c | 12 ++++++++++++
 sys/compat/linux/linux_misc.h |  3 ++-
 2 files changed, 14 insertions(+), 1 deletion(-)
Comment 4 commit-hook freebsd_committer freebsd_triage 2026-04-22 10:23:16 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=45827f9ad2e32ec8e4cdde62cbf722a48fb1b396

commit 45827f9ad2e32ec8e4cdde62cbf722a48fb1b396
Author:     Pouria Mousavizadeh Tehrani <pouria@FreeBSD.org>
AuthorDate: 2026-04-22 10:17:50 +0000
Commit:     Pouria Mousavizadeh Tehrani <pouria@FreeBSD.org>
CommitDate: 2026-04-22 10:17:50 +0000

    linux: Fix a typo in a header comment

    PR:             294651
    Reported by:    Dmitry Lukhtionov <dmitryluhtionov@gmail.com>
    Fixes:          50ff71e956b6 ("linux: Support PR_GET_CHILD_SUBREAPER prctl(2)")
    Pull-Request:   https://github.com/freebsd/freebsd-src/pull/2151

 sys/compat/linux/linux_misc.h | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)