linux: Support PR_GET_CHILD_SUBREAPER prctl(2)

PR: 294651
Signed-off-by: Ricardo Branco <rbranco@suse.de>
Reviewed by: kib, pouria
Pull-Request: https://github.com/freebsd/freebsd-src/pull/2151