sys/compat/linux/linux_misc.h
@@ -57,7 +57,8 @@
 #define	LINUX_PR_GET_SECCOMP	21
 #define	LINUX_PR_SET_SECCOMP	22
 #define	LINUX_PR_CAPBSET_READ	23
-#define LINUX_PR_SET_CHILD_SUBREAPER 36
+#define	LINUX_PR_SET_CHILD_SUBREAPER	36 /* Get child subreaper status */
+#define	LINUX_PR_GET_CHILD_SUBREAPER	37 /* Set child subreaper status */
 #define	LINUX_PR_SET_NO_NEW_PRIVS	38
 #define	LINUX_PR_SET_PTRACER	1499557217
 
